--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-tactile
 title:  "Salesforce CFP Calendar"
-description:  "One Salesforce community member's best effort of keeping track of open and upcoming calls for presentations"
+description:  "A Salesforce community volunteer-driven effort to keep track of open and upcoming calls for presentations"
